<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProblemReport</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="software_problem_report">Software Problem Report</string>
    <string name="project">Project</string>
    <string name="title">Title</string>
    <string name="number">Number</string>
    <string name="date_of_issue">Date of Issue (dd/mm/yyyy)</string>
    <string name="modules">Modules Affected</string>
    <string name="description">Description</string>
    <string name="recommended_solution">Recommended Solution</string>
    <string name="priority">Priority (critical, high, medium, low)</string>
    <string name="severity">Severity (high, medium, low)</string>
    <string name="date_assigned">Date Assigned (dd/mm/yyyy)</string>
    <string name="date_fixed">Date Fixed (dd/mm/yyyy)</string>
    <string name="submit">Submit</string>
    <string name="originator">Originator</string>
    <string name="in_scope">In Scope</string>
    <string name="engineer">Engineering Change Request</string>

</resources>
