<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
  android:layout_height="fill_parent">

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/software_problem_report" />

      <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/project" 
        android:paddingBottom="@dimen/text_vertical_margin"
    	android:paddingLeft="@dimen/text_horizontal_margin"
    	android:paddingRight="@dimen/text_horizontal_margin"
    	android:paddingTop="@dimen/text_vertical_margin"/>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:paddingBottom="@dimen/text_vertical_margin"
    	android:paddingLeft="@dimen/text_horizontal_margin"
    	android:paddingRight="@dimen/text_horizontal_margin"
    	android:paddingTop="@dimen/text_vertical_margin"
        android:text="@string/title" />

  

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
       android:layout_alignLeft="@+id/textView3"
       android:paddingBottom="@dimen/text_vertical_margin"
    	android:paddingLeft="@dimen/text_horizontal_margin"
    	android:paddingRight="@dimen/text_horizontal_margin"
    	android:paddingTop="@dimen/text_vertical_margin"
        android:text="@string/modules" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_below="@+id/textView4"
       android:layout_alignLeft="@+id/textView4"
       android:paddingBottom="@dimen/text_vertical_margin"
    	android:paddingLeft="@dimen/text_horizontal_margin"
    	android:paddingRight="@dimen/text_horizontal_margin"
    	android:paddingTop="@dimen/text_vertical_margin"
        android:text="@string/number" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:paddingBottom="@dimen/text_vertical_margin"
    	android:paddingLeft="@dimen/text_horizontal_margin"
    	android:paddingRight="@dimen/text_horizontal_margin"
    	android:paddingTop="@dimen/text_vertical_margin"
        android:text="@string/date_of_issue" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:paddingBottom="@dimen/text_vertical_margin"
    	android:paddingLeft="@dimen/text_horizontal_margin"
    	android:paddingRight="@dimen/text_horizontal_margin"
    	android:paddingTop="@dimen/text_vertical_margin"
        android:text="@string/originator" />

        <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:paddingBottom="@dimen/text_vertical_margin"
    	android:paddingLeft="@dimen/text_horizontal_margin"
    	android:paddingRight="@dimen/text_horizontal_margin"
    	android:paddingTop="@dimen/text_vertical_margin"
        android:text="@string/description" />

         <CheckBox
             android:id="@+id/checkBox1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/textView2"
             android:layout_alignParentRight="true"
             android:textSize="12sp"
             android:text="@string/in_scope" />

         <EditText
             android:id="@+id/editText1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView2"
             android:layout_alignBottom="@+id/textView2"
             android:layout_toRightOf="@+id/textView2"
             android:ems="10" 
             android:inputType="text"/>

         <EditText
             android:id="@+id/EditText01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editText1"
             android:layout_toRightOf="@+id/textView2"
             android:ems="10"
             android:inputType="text" />

         <EditText
             android:id="@+id/EditText02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView4"
             android:layout_alignRight="@+id/EditText01"
             android:layout_toRightOf="@+id/textView4"
             android:ems="10"
             android:inputType="text" />

         <EditText
             android:id="@+id/EditText03"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView4"
             android:layout_toLeftOf="@+id/EditText02"
             android:layout_toRightOf="@+id/textView5"
             android:ems="10"
             android:inputType="text" />

        <EditText
             android:id="@+id/editText2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView6"
             android:layout_toRightOf="@+id/textView6"
             android:ems="10"
             android:inputType="date" >

         </EditText>

         <EditText
             android:id="@+id/EditText04"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/textView7"
             android:layout_toRightOf="@+id/textView7"
             android:ems="10"
             android:inputType="text" />

         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/editText3"
             android:layout_below="@+id/editText3"
             android:paddingBottom="@dimen/text_vertical_margin"
             android:paddingLeft="@dimen/text_horizontal_margin"
             android:paddingRight="@dimen/text_horizontal_margin"
             android:paddingTop="@dimen/text_vertical_margin"
             android:text="@string/recommended_solution" />

         <EditText
             android:id="@+id/editText3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textView8"
             android:layout_below="@+id/textView8"
             android:ems="10"
             android:inputType="textMultiLine"
             android:lines="2"
             android:minLines="2" />

         <EditText
             android:id="@+id/EditText05"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textView9"
             android:layout_below="@+id/textView9"
             android:ems="10"
             android:inputType="textMultiLine"
             android:lines="2"
             android:minLines="2" />
         
         <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText05"
        android:layout_below="@+id/EditText05"
        android:paddingBottom="@dimen/text_vertical_margin"
    	android:paddingLeft="@dimen/text_horizontal_margin"
    	android:paddingRight="@dimen/text_horizontal_margin"
    	android:paddingTop="@dimen/text_vertical_margin"
        android:text="@string/priority" />
         
          <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_below="@+id/textView10"
        android:paddingBottom="@dimen/text_vertical_margin"
    	android:paddingLeft="@dimen/text_horizontal_margin"
    	android:paddingRight="@dimen/text_horizontal_margin"
    	android:paddingTop="@dimen/text_vertical_margin"
        android:text="@string/severity" />
          
          <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:paddingBottom="@dimen/text_vertical_margin"
    	android:paddingLeft="@dimen/text_horizontal_margin"
    	android:paddingRight="@dimen/text_horizontal_margin"
    	android:paddingTop="@dimen/text_vertical_margin"
        android:text="@string/date_assigned" />
          
          <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:paddingBottom="@dimen/text_vertical_margin"
    	android:paddingLeft="@dimen/text_horizontal_margin"
    	android:paddingRight="@dimen/text_horizontal_margin"
    	android:paddingTop="@dimen/text_vertical_margin"
        android:text="@string/date_fixed" />

          <EditText
              android:id="@+id/editText4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignTop="@+id/textView13"
              android:layout_toRightOf="@+id/textView13"
              android:ems="10"
              android:inputType="date" >

            
          </EditText>

          <EditText
              android:id="@+id/editText5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView11"
              android:layout_toRightOf="@+id/textView6"
              android:ems="10"
              android:inputType="date" />

          <EditText
              android:id="@+id/editText6"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:layout_alignTop="@+id/textView10"
              android:layout_toRightOf="@+id/textView10"
              android:ems="10" 
              android:inputType="text"/>

          <EditText
              android:id="@+id/editText7"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/editText6"
              android:layout_toRightOf="@+id/textView11"
              android:ems="10" 
              android:inputType="text"/>

          <Button
              android:id="@+id/button1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView13"
              android:layout_alignLeft="@+id/textView13"
              android:text="@string/submit" />
       
</RelativeLayout> 

</ScrollView>